@@ -1,3 +1,7 @@
+2015-11-11  Michael Forney  <forney@google.com>
+
+	* lib/target.exp (default_target_compile): Honor LDFLAGS_FOR_TARGET.
+
 2015-11-11  Ben Elliston  <bje@gnu.org>
 
 	* doc/dejagnu.texi: Regenerate.
